<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d9dfe0"
    tools:context=".AddPlantStatus"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="24dp">
                <ImageView
                    android:id="@+id/homeIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/status"
                    app:tint="#F24BC84D" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/tree_leaf"
                    android:textSize="16sp"
                    android:fontFamily="@font/bold"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:layout_marginStart="16dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/dimensionsHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plant_dimensions"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="#000000"
                android:fontFamily="@font/semi_bold"
                android:layout_below="@id/layout"/>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_below="@id/dimensionsHeading">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_svg_plantheight_redgreen"/>
                <EditText
                    android:id="@+id/plantHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:fontFamily="@font/light"
                    android:inputType="numberDecimal"
                    android:hint="@string/plant_height"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:layout_below="@id/linearLayout">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_svg_plantcircumference_redgreen"/>
                <EditText
                    android:id="@+id/plantCircumference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:fontFamily="@font/light"
                    android:inputType="numberDecimal"
                    android:hint="@string/plant_circumference"/>

            </LinearLayout>

            <TextView
                android:id="@+id/numberOfStems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_stems"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="#000000"
                android:layout_below="@id/linearLayout1"/>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:layout_below="@id/numberOfStems">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/stems"
                    app:tint="#000000" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp">
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:padding="0dp"
                        android:textColor="#000"
                        android:background="@android:color/holo_red_light"
                        android:id="@+id/decrement"
                        android:textStyle="bold"
                        android:onClick="decreaseInteger"
                        android:text="—"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:background="@android:color/white"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:id="@+id/display"
                        android:gravity="center"
                        />
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="0dp"
                        android:textSize="25sp"
                        android:textColor="@android:color/black"
                        android:background="@color/colorPrimary"
                        android:id="@+id/increment"
                        android:onClick="increaseInteger"
                        android:text="+"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/statusSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Ongaro yo womuti"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="#000000"
                android:layout_below="@id/linearLayout3"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/statusSpinner"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:padding="24dp">
                <Spinner
                    android:id="@+id/plantStatusSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="#000000"
                    android:dropDownWidth="match_parent"
                    android:popupElevation="8dp"
                    android:popupBackground="#F24BC84D"/>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/typeOfInsects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insect_types_head"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="#000000"
                android:layout_below="@id/cardViewSpinner"/>
            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:layout_below="@id/typeOfInsects">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/insects"/>
                <EditText
                    android:id="@+id/insectTypes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:hint="@string/insect_types"/>

            </LinearLayout>

            <TextView
                android:id="@+id/phenology"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ekweze romuti "
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="#000000"
                android:layout_below="@id/linearLayout4"/>

            <LinearLayout
                android:id="@+id/layPhen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal"
                android:layout_below="@id/phenology">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        app:srcCompat="@drawable/ic_fruit"/>
                    <CheckBox
                        android:id="@+id/fruit"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Ovihape"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        app:srcCompat="@drawable/ic_mopane_flower"/>
                    <CheckBox
                        android:id="@+id/flower"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Ozongara"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        app:srcCompat="@drawable/ic_mopane_leaf"
                        app:tint="#F24BC84D" />
                    <CheckBox
                        android:id="@+id/leaves"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Oviyao"/>
                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/proceedOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kaende : Next"
                android:drawableRight="@drawable/ic_next"
                android:padding="16dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="48dp"
                android:textAllCaps="false"
                android:onClick="next"
                android:background="#F24BC84D"
                android:layout_below="@id/layPhen"
                android:gravity="center_horizontal"
                android:drawableEnd="@drawable/ic_next" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>